--- a/css/style.css
+++ b/css/style.css
@@ -513,3 +513,58 @@ body {
   top: 50%;
   bottom: unset;
 }
+
+.first {
+  position: relative;
+}
+.first__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+.first__bg img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.first__body {
+  min-height: calc(100vh - 100px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+}
+.first__body::after {
+  content: "";
+  background: url("../img/first/icons/mercedes_icon.svg") center/cover no-repeat;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.first__title {
+  font-family: "Corporate A", serif;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 120%;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.first__title:not(:last-child) {
+  margin-bottom: 5px;
+}
+.first__text {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 24px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding-bottom: 50px;
+}
