added the "concept" and the "footer" sections

--- a/scss/_first.scss
+++ b/scss/_first.scss
@@ -8,6 +8,8 @@
 		bottom: 0;
 		right: 0;
 		z-index: -1;
+		border-radius: 400px 400px 0px 0px;
+		overflow: hidden;
 
 		img {
 			position: absolute;
