--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,8 @@ body {
   bottom: 0;
   right: 0;
   z-index: -1;
+  border-radius: 400px 400px 0px 0px;
+  overflow: hidden;
 }
 .first__bg img {
   position: absolute;
@@ -567,4 +569,23 @@ body {
   font-size: 24px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-bottom: 50px;
+}
+
+.footer {
+  padding: 130px 0px;
+  background: #070a1b;
+}
+.footer__body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__policy {
+  transition: all 0.3s;
+}
+.footer__policy:hover {
+  color: #c1a1d2;
+}
+.footer__logo {
+  margin: 0 auto;
 }
