--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -69,4 +69,11 @@ body {
 }
 
 .title--section {
+	font-family: "Corporate A", serif;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 120%;
+	color: #f402a2;
+	text-transform: uppercase;
+	margin-bottom: 25px;
 }
