--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,8 +16,11 @@
 //FIRST
 @import "_first.scss";
 
-//FOOTER
-@import "_footer.scss";
-
 //CONCEPT
 @import "_concept.scss";
+
+//PREMIER
+@import "_premier.scss";
+
+//FOOTER
+@import "_footer.scss";
