--- a/scss/_concept.scss
+++ b/scss/_concept.scss
@@ -1,13 +1,28 @@
 .concept {
+	margin-bottom: 150px;
+
 	&__body {
+		max-width: 900px;
+		margin-left: auto;
 	}
 
 	&__title {
 	}
 
 	&__text {
+		font-size: 24px;
+		line-height: 120%;
+		margin-bottom: 25px;
 	}
 
 	&__image {
+		width: 100%;
+		height: 500px;
+
+		img {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
 	}
 }
