--- a/scss/_first.scss
+++ b/scss/_first.scss
@@ -1,5 +1,6 @@
 .first {
 	position: relative;
+	margin-bottom: 150px;
 
 	&__bg {
 		position: absolute;
@@ -54,8 +55,8 @@
 	}
 
 	&__text {
-		font-family: "Roboto Condensed", sans-serif;
 		font-size: 24px;
+		line-height: 120%;
 		text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 		padding-bottom: 50px;
 	}
