--- a/scss/_premier.scss
+++ b/scss/_premier.scss
@@ -3,6 +3,7 @@
 
 	&__body {
 		display: flex;
+		align-items: flex-end;
 	}
 
 	&__column {
@@ -17,14 +18,61 @@
 	}
 
 	&__text {
+		line-height: 120%;
+
+		&:not(:last-child) {
+			margin-bottom: 25px;
+		}
 	}
 
 	&__image {
+		width: 100%;
+		height: 400px;
+
+		img {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+
+		&:not(:last-child) {
+			margin-bottom: 25px;
+		}
 	}
 
 	&__btn {
+		display: block;
+		text-transform: uppercase;
+		text-align: center;
+		font-family: "Corporate A", serif;
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 120%;
+		color: #f402a2;
+		border: 1px solid #f402a2;
+		padding: 15px;
+		transition: all 0.3s;
+
+		&:hover {
+			color: #53a1cb;
+			border-color: #53a1cb;
+		}
 	}
 
 	&__image-2 {
+		width: 100%;
+		height: 665px;
+		border-radius: 284.5px 0px 0px 0px;
+		overflow: hidden;
+
+		img {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+
+		&:not(:last-child) {
+			margin-bottom: 20px;
+		}
 	}
 }
