--- a/css/style.css
+++ b/css/style.css
@@ -463,11 +463,11 @@ body {
 }
 .header__body {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 .header__logo {
-  margin: 0 auto;
+  margin-left: 150px;
 }
 .menu {
   display: flex;
@@ -667,6 +667,59 @@ body {
 }
 .premier__image-2:not(:last-child) {
   margin-bottom: 20px;
+}
+
+.video {
+  margin-bottom: 150px;
+}
+.video__poster {
+  width: 100%;
+  height: 600px;
+  border-radius: 300px 0px 0px 0px;
+  overflow: hidden;
+}
+.video__poster img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.video__poster:not(:last-child) {
+  margin-bottom: 25px;
+}
+.video__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #f402a2;
+  color: #f402a2;
+  padding: 15px;
+  text-transform: uppercase;
+  font-family: "Corporate A", serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 120%;
+  transition: all 0.3s;
+}
+.video__btn svg {
+  width: 25px;
+  height: 25px;
+}
+.video__btn svg:not(:last-child) {
+  margin-right: 10px;
+}
+.video__btn svg path {
+  transition: all 0.3s;
+}
+.video__btn span {
+  padding-top: 4px;
+}
+.video__btn:hover {
+  color: #53a1cb;
+  border-color: #53a1cb;
+}
+.video__btn:hover svg path {
+  fill: #53a1cb;
 }
 
 .footer {
