--- a/css/style.css
+++ b/css/style.css
@@ -722,6 +722,35 @@ body {
   fill: #53a1cb;
 }
 
+.design__interior {
+  display: grid;
+  grid-template-columns: 255px 255px auto 330px;
+  grid-template-rows: auto auto;
+  gap: 15px 45px;
+}
+.design__image-1 {
+  width: 100%;
+  height: 450px;
+}
+.design__image-1 img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.design__image-2 {
+  width: 100%;
+  height: 205px;
+  border-radius: 102.5px 0px;
+  overflow: hidden;
+}
+.design__image-2 img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 .footer {
   padding: 130px 0px;
   background: #070a1b;
