--- a/css/style.css
+++ b/css/style.css
@@ -730,6 +730,7 @@ body {
   grid-template-columns: 255px 255px auto 330px;
   grid-template-rows: auto auto;
   gap: 15px 45px;
+  margin-bottom: 100px;
 }
 .design__cell-one {
   grid-row: 1/3;
@@ -773,6 +774,40 @@ body {
      object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.design-slider {
+  padding-bottom: 25px;
+}
+.design-slider__slide {
+  width: 450px;
+  height: 280px;
+  margin: 0 30px;
+}
+.design-slider__slide img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.design-slider .slick-track {
+  margin-left: -1.6%;
+}
+.design-slider .slick-arrow {
+  width: 50px;
+  height: 25px;
+  cursor: pointer;
+  position: absolute;
+  z-index: 10;
+  bottom: 0;
+  left: 50%;
+  left: 48.5%;
+}
+.design-slider .arrow-left {
+  transform: translateX(-110%);
+}
+.design-slider .arrow-right {
+  transform: translateX(120%);
 }
 
 .footer {
