--- a/css/style.css
+++ b/css/style.css
@@ -775,39 +775,69 @@ body {
   width: 100%;
   height: 100%;
 }
-
-.design-slider {
-  padding-bottom: 25px;
+.design .design-slider {
+  padding-bottom: 37.5px;
+  margin-bottom: 137.5px;
 }
-.design-slider__slide {
+.design .design-slider__slide {
   width: 450px;
   height: 280px;
   margin: 0 30px;
 }
-.design-slider__slide img {
+.design .design-slider__slide img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.design-slider .slick-track {
+.design .design-slider .slick-track {
   margin-left: -1.6%;
 }
-.design-slider .slick-arrow {
+.design .design-slider .slick-arrow {
   width: 50px;
   height: 25px;
   cursor: pointer;
   position: absolute;
   z-index: 10;
   bottom: 0;
-  left: 50%;
   left: 48.5%;
 }
-.design-slider .arrow-left {
+.design .design-slider .arrow-left {
   transform: translateX(-110%);
 }
-.design-slider .arrow-right {
+.design .design-slider .arrow-right {
   transform: translateX(120%);
+}
+.design .design-box {
+  max-width: 600px;
+  margin: 0px auto 150px;
+  padding: 0px 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.design__box-column {
+  flex: 0 1 50%;
+}
+.design__box-column:not(:last-child) {
+  margin-right: 60px;
+}
+.design__box-text {
+  line-height: 120%;
+}
+.design__box-text:not(:last-child) {
+  margin-bottom: 25px;
+}
+.design__image-bottom {
+  width: 100%;
+  height: 900px;
+  border-radius: 450px 450px 0px 0px;
+  overflow: hidden;
+}
+.design__image-bottom img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .footer {
