--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -59,43 +59,82 @@
 			height: 100%;
 		}
 	}
-}
 
-.design-slider {
-	padding-bottom: 25px;
+	.design-slider {
+		padding-bottom: calc(25px + 12.5px);
+		margin-bottom: 137.5px;
 
-	&__slide {
-		width: 450px;
-		height: 280px;
-		margin: 0 30px;
+		&__slide {
+			width: 450px;
+			height: 280px;
+			margin: 0 30px;
+
+			img {
+				object-fit: cover;
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+		.slick-track {
+			margin-left: -1.6%;
+		}
+
+		.slick-arrow {
+			width: 50px;
+			height: 25px;
+			cursor: pointer;
+			position: absolute;
+			z-index: 10;
+			bottom: 0;
+			//left: 50%;
+			left: 48.5%;
+		}
+
+		.arrow-left {
+			transform: translateX(-110%);
+		}
+
+		.arrow-right {
+			transform: translateX(120%);
+		}
+	}
+
+	.design-box {
+		max-width: 600px;
+		margin: 0px auto 150px;
+		padding: 0px 15px;
+		display: flex;
+		justify-content: space-between;
+		//gap: 60px;
+	}
+
+	&__box-column {
+		flex: 0 1 50%;
+
+		&:not(:last-child) {
+			margin-right: 60px;
+		}
+	}
+
+	&__box-text {
+		line-height: 120%;
+
+		&:not(:last-child) {
+			margin-bottom: 25px;
+		}
+	}
+
+	&__image-bottom {
+		width: 100%;
+		height: 900px;
+		border-radius: 450px 450px 0px 0px;
+		overflow: hidden;
 
 		img {
 			object-fit: cover;
 			width: 100%;
 			height: 100%;
 		}
-	}
-
-	.slick-track {
-		margin-left: -1.6%;
-	}
-
-	.slick-arrow {
-		width: 50px;
-		height: 25px;
-		cursor: pointer;
-		position: absolute;
-		z-index: 10;
-		bottom: 0;
-		left: 50%;
-		left: 48.5%;
-	}
-
-	.arrow-left {
-		transform: translateX(-110%);
-	}
-
-	.arrow-right {
-		transform: translateX(120%);
 	}
 }
