--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,10 @@ body {
   left: 0;
   transition: all 0.3s;
 }
+.menu__btn--active {
+  position: relative;
+  z-index: 10;
+}
 .menu__btn--active span {
   opacity: 0;
 }
@@ -522,6 +526,38 @@ body {
   transform: rotate(-45deg);
   top: 50%;
   bottom: unset;
+}
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  left: -100%;
+  top: 0;
+  width: 100%;
+  padding: 100px 0px 50px;
+  background: #070a1b;
+  min-height: 100vh;
+  overflow: auto;
+  transition: left 0.3s;
+}
+.menu__list--active {
+  left: 0;
+  position: absolute;
+  z-index: 5;
+}
+.menu__item:not(:last-child) {
+  margin-bottom: 15px;
+}
+.menu__link {
+  font-size: 24px;
+  line-height: 120%;
+  color: #fff;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: all 0.3s;
+}
+.menu__link:hover {
+  color: #f402a2;
 }
 
 .first {
