fixed some bugs in the "header" section

--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,7 @@ body {
   width: 100%;
   padding: 100px 0px 50px;
   background: #070a1b;
-  min-height: 100vh;
+  height: 100vh;
   overflow: auto;
   transition: left 0.3s;
 }
