--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -110,7 +110,7 @@
 		width: 100%;
 		padding: 100px 0px 50px;
 		background: #070a1b;
-		min-height: 100vh;
+		height: 100vh;
 		overflow: auto; //чтобы появился скролл при большом кол-ве пунктов меню
 		transition: left 0.3s;
 	}
