--- a/scss/_first.scss
+++ b/scss/_first.scss
@@ -4,6 +4,10 @@
 	margin-bottom: 150px;
 	z-index: 2;
 
+	@media (max-width: 768px) {
+		background: transparent;
+	}
+
 	&__bg {
 		position: absolute;
 		top: 0;
@@ -14,6 +18,25 @@
 		border-radius: 400px 400px 0px 0px;
 		overflow: hidden;
 
+		@media (max-width: 1440px) {
+			border-radius: 300px 300px 0px 0px;
+		}
+
+		@media (max-width: 1200px) {
+			border-radius: 220px 220px 0px 0px;
+		}
+
+		@media (max-width: 768px) {
+			position: relative;
+			height: 300px;
+			border-radius: 130px 130px 0px 0px;
+		}
+
+		@media (max-width: 480px) {
+			height: 230px;
+			border-radius: 100px 100px 0px 0px;
+		}
+
 		img {
 			position: absolute;
 			top: 0;
@@ -21,6 +44,10 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+
+			@media (max-width: 768px) {
+				position: relative;
+			}
 		}
 	}
 
@@ -31,6 +58,10 @@
 		align-items: center;
 		justify-content: flex-end;
 		position: relative;
+
+		@media (max-width: 768px) {
+			min-height: 100%;
+		}
 
 		&::after {
 			content: "";
@@ -50,9 +81,18 @@
 		font-size: 72px;
 		line-height: 120%;
 		text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+		text-align: center;
 
 		&:not(:last-child) {
 			margin-bottom: 5px;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 60px;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 55px;
 		}
 	}
 
