--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,11 @@
 	background: #070a1b;
 	padding: 30px 0px;
 
+	@media (max-width: 768px) {
+		padding: 25px 0px;
+		background: transparent;
+	}
+
 	&__body {
 		display: flex;
 		justify-content: space-between;
@@ -24,12 +29,13 @@
 		@media (max-width: 768px) {
 			margin-left: unset;
 			flex: 0 1 50%;
+			height: 35px;
 		}
 	}
 
 	&__list {
 		@media (max-width: 768px) {
-			margin-top: 15px;
+			margin-top: 10px;
 			margin-left: auto;
 		}
 	}
