--- a/scss/_concept.scss
+++ b/scss/_concept.scss
@@ -1,6 +1,10 @@
 .concept {
 	margin-bottom: 150px;
 
+	@media (max-width: 768px) {
+		margin-bottom: 75px;
+	}
+
 	&__body {
 		max-width: 900px;
 		margin-left: auto;
@@ -13,6 +17,10 @@
 		font-size: 24px;
 		line-height: 120%;
 		margin-bottom: 25px;
+
+		@media (max-width: 768px) {
+			font-size: 16px;
+		}
 	}
 
 	&__image {
@@ -23,6 +31,18 @@
 			object-fit: cover;
 			width: 100%;
 			height: 100%;
+
+			@media (max-width: 1000px) {
+				object-position: right;
+			}
+		}
+
+		@media (max-width: 768px) {
+			height: 300px;
+		}
+
+		@media (max-width: 480px) {
+			height: 230px;
 		}
 	}
 }
