--- a/css/style.css
+++ b/css/style.css
@@ -768,15 +768,35 @@ body {
 .premier {
   margin-bottom: 150px;
 }
+@media (max-width: 768px) {
+  .premier {
+    margin-bottom: 75px;
+  }
+}
 .premier__body {
   display: flex;
   align-items: flex-end;
+}
+@media (max-width: 768px) {
+  .premier__body {
+    flex-direction: column;
+  }
 }
 .premier__column {
   flex: 0 1 50%;
 }
 .premier__column:not(:last-child) {
   margin-right: 60px;
+}
+@media (max-width: 1000px) {
+  .premier__column:not(:last-child) {
+    margin-right: 25px;
+  }
+}
+@media (max-width: 768px) {
+  .premier__column:not(:last-child) {
+    margin-right: unset;
+  }
 }
 .premier__text {
   line-height: 120%;
@@ -796,6 +816,16 @@ body {
 }
 .premier__image:not(:last-child) {
   margin-bottom: 25px;
+}
+@media (max-width: 768px) {
+  .premier__image {
+    height: 300px;
+  }
+}
+@media (max-width: 480px) {
+  .premier__image {
+    height: 230px;
+  }
 }
 .premier__btn {
   display: block;
@@ -825,6 +855,31 @@ body {
      object-fit: cover;
   width: 100%;
   height: 100%;
+}
+@media (max-width: 1000px) {
+  .premier__image-2 img {
+    -o-object-position: left;
+       object-position: left;
+  }
+}
+@media (max-width: 768px) {
+  .premier__image-2 img {
+    -o-object-position: bottom;
+       object-position: bottom;
+  }
+}
+@media (max-width: 768px) {
+  .premier__image-2 {
+    margin-top: 25px;
+    height: 300px;
+    border-radius: 150px 0px 0px 0px;
+  }
+}
+@media (max-width: 480px) {
+  .premier__image-2 {
+    height: 230px;
+    border-radius: 120px 0px 0px 0px;
+  }
 }
 .premier__image-2:not(:last-child) {
   margin-bottom: 20px;
