--- a/scss/_premier.scss
+++ b/scss/_premier.scss
@@ -1,9 +1,17 @@
 .premier {
 	margin-bottom: 150px;
 
+	@media (max-width: 768px) {
+		margin-bottom: 75px;
+	}
+
 	&__body {
 		display: flex;
 		align-items: flex-end;
+
+		@media (max-width: 768px) {
+			flex-direction: column;
+		}
 	}
 
 	&__column {
@@ -11,6 +19,14 @@
 
 		&:not(:last-child) {
 			margin-right: 60px;
+
+			@media (max-width: 1000px) {
+				margin-right: 25px;
+			}
+
+			@media (max-width: 768px) {
+				margin-right: unset;
+			}
 		}
 	}
 
@@ -37,6 +53,14 @@
 
 		&:not(:last-child) {
 			margin-bottom: 25px;
+		}
+
+		@media (max-width: 768px) {
+			height: 300px;
+		}
+
+		@media (max-width: 480px) {
+			height: 230px;
 		}
 	}
 
@@ -69,6 +93,25 @@
 			object-fit: cover;
 			width: 100%;
 			height: 100%;
+
+			@media (max-width: 1000px) {
+				object-position: left;
+			}
+
+			@media (max-width: 768px) {
+				object-position: bottom;
+			}
+		}
+
+		@media (max-width: 768px) {
+			margin-top: 25px;
+			height: 300px;
+			border-radius: 150px 0px 0px 0px;
+		}
+
+		@media (max-width: 480px) {
+			height: 230px;
+			border-radius: 120px 0px 0px 0px;
 		}
 
 		&:not(:last-child) {
