--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -1,6 +1,10 @@
 .video {
 	margin-bottom: 150px;
 
+	@media (max-width: 768px) {
+		margin-bottom: 75px;
+	}
+
 	&__body {
 	}
 
@@ -18,6 +22,21 @@
 
 		&:not(:last-child) {
 			margin-bottom: 25px;
+		}
+
+		@media (max-width: 1000px) {
+			height: 450px;
+			border-radius: 230px 0px 0px 0px;
+		}
+
+		@media (max-width: 768px) {
+			height: 300px;
+			border-radius: 150px 0px 0px 0px;
+		}
+
+		@media (max-width: 480px) {
+			height: 195px;
+			border-radius: 110px 0px 0px 0px;
 		}
 	}
 
